[gd_scene load_steps=24 format=3 uid="uid://rv0tkbg2op8n"]

[ext_resource type="Script" path="res://Monsters/Creature/creature.gd" id="1_eyf56"]
[ext_resource type="Texture2D" uid="uid://cmuhufqve6oeu" path="res://Sprites/reaper_2.png" id="2_0dk4b"]
[ext_resource type="Texture2D" uid="uid://drim28ro2uagq" path="res://Sprites/target.png" id="3_mgrsk"]
[ext_resource type="PackedScene" uid="uid://15ipgiq6uow2" path="res://Spells/Holy/holy_wave.tscn" id="4_r0of7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y8404"]
atlas = ExtResource("2_0dk4b")
region = Rect2(58, 224, 37, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwfbb"]
atlas = ExtResource("2_0dk4b")
region = Rect2(59, 81, 37, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bpwr"]
atlas = ExtResource("2_0dk4b")
region = Rect2(58, 152, 37, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge85w"]
atlas = ExtResource("2_0dk4b")
region = Rect2(51, 0, 51, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqgdv"]
atlas = ExtResource("2_0dk4b")
region = Rect2(0, 0, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvjoq"]
atlas = ExtResource("2_0dk4b")
region = Rect2(52, 0, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_alaw1"]
atlas = ExtResource("2_0dk4b")
region = Rect2(104, 0, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0xc3"]
atlas = ExtResource("2_0dk4b")
region = Rect2(0, 72, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_lekvj"]
atlas = ExtResource("2_0dk4b")
region = Rect2(52, 72, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yueh"]
atlas = ExtResource("2_0dk4b")
region = Rect2(104, 72, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j014"]
atlas = ExtResource("2_0dk4b")
region = Rect2(0, 144, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp4sy"]
atlas = ExtResource("2_0dk4b")
region = Rect2(52, 144, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xo7d"]
atlas = ExtResource("2_0dk4b")
region = Rect2(104, 144, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_vasqx"]
atlas = ExtResource("2_0dk4b")
region = Rect2(0, 216, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4vj6"]
atlas = ExtResource("2_0dk4b")
region = Rect2(52, 216, 52, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_sohy0"]
atlas = ExtResource("2_0dk4b")
region = Rect2(104, 216, 52, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2o00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8404")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwfbb")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bpwr")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge85w")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqgdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvjoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alaw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvjoq")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0xc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lekvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yueh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lekvj")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j014")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp4sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xo7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp4sy")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vasqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4vj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sohy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4vj6")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqk62"]
size = Vector2(32, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11q12"]
size = Vector2(32, 57)

[node name="Creature" type="CharacterBody2D" groups=["Creatures"]]
motion_mode = 1
safe_margin = 0.008
script = ExtResource("1_eyf56")
HolyWave = ExtResource("4_r0of7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_u2o00")
animation = &"idle_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_fqk62")
one_way_collision_margin = 0.0

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, 12)
target_position = Vector2(0, 32)
collide_with_areas = true

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(0, 12)
target_position = Vector2(0, -32)
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 12)
target_position = Vector2(32, 0)
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 12)
target_position = Vector2(-32, 0)
collide_with_areas = true

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -16.0
offset_top = -46.0
offset_right = 24.0
offset_bottom = -6.0
scale = Vector2(0.800001, 1)

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1, 0.159999)
color = Color(0.190762, 0.190762, 0.190762, 1)

[node name="Foreground" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1, 0.159999)
color = Color(0, 0.784314, 0, 1)

[node name="Target" type="Sprite2D" parent="."]
position = Vector2(0, 21.5)
scale = Vector2(2, 1.8125)
texture = ExtResource("3_mgrsk")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_11q12")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 2

[node name="Area2D2" parent="." instance=ExtResource("4_r0of7")]

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
